# svgr-rs

./: .gitignore  .npmignore  Cargo.toml  README.md  binding.d.ts  binding.js  index.d.ts  index.js  package.json  rust-toolchain.toml  tsconfig.json
.cargo/: config.toml
.github/workflows/: CI.yml  codspeed.yml
__test__/: index.spec.mjs
__tests__/: config.spec.ts
__tests__/__snapshots__/: config.spec.ts.md  config.spec.ts.snap
bindings/: Cargo.toml
bindings/svgr_cli/: Cargo.toml
bindings/svgr_cli/src/: main.rs
crates/binding/: Cargo.toml
crates/binding/src/: config.rs  lib.rs  state.rs
crates/core/: Cargo.toml
crates/core/benches/: bench.rs
crates/core/src/: add_jsx_attribute.rs  lib.rs  remove_jsx_attribute.rs  replace_jsx_attribute.rs  svg_dynamic_title.rs  svg_em_dimensions.rs  transform_react_native_svg.rs
crates/core/src/core/: config.rs  state.rs
crates/core/src/hast_to_swc_ast/: decode_xml.rs  mappings.rs  mod.rs  string_to_object_style.rs  util.rs
crates/core/src/transform_svg_component/: mod.rs  variables.rs
fixture/basic/: output.jsx
fixture/should-handle-spaces-and-tab/: output.jsx
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: update_fallback_dependencies.js
scripts/npm/darwin-arm64/: package.json
scripts/npm/darwin-x64/: README.md  package.json
src/: add_jsx_attribute.rs  decode_xml.rs  hast_to_swc_ast.rs  lib.rs  main.rs  remove_jsx_attribute.rs  replace_jsx_attribute.rs  svg_dynamic_title.rs  svg_em_dimensions.rs  transform_react_native_svg.rs  visitor.rs
src/core/: config.rs  state.rs
src/hast_to_swc_ast/: decode_xml.rs  mod.rs  string_to_object_style.rs
src/transform_svg_component/: mod.rs  variables.rs
