[package]
name = "svgr-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"

clap = { version = "4.2.0", features = ["derive"] }
regex = "1.7.3"
swc = "0.259.2"
swc_common = "0.30.5"
swc_core = { version = "0.74.2", features = ["testing"] }
swc_ecmascript = { version = "0.226.2", features = ["codegen"] }
swc_xml = "0.10.3"

[build-dependencies]
napi-build = "2.0.1"

[dev-dependencies]
testing = "0.32.5"

[profile.release]
lto = true
