[package]
authors     = ["SyMind <dacongsama@live.com>"]
description = "A tool to transform SVG into React components"
name        = "svgr-rs"
edition     = "2021"
license     = "MIT"
repository  = "https://github.com/svg-rust/svgr-rs.git"
version     = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
node = ["dep:napi", "dep:napi-derive"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4", "async"], optional = true }
napi-derive = { version = "2.12.2", optional = true }

clap = { version = "4.2.0", features = ["derive"] }
regex = "1.7.3"
serde = { version = "1", features = ["derive"] }
swc_xml = "0.10.3"
swc_core = { version = "0.74.2", features = [
  "ecma_ast",
  "ecma_ast_serde",
  "common_concurrent",
  "bundler",
  "ecma_loader",
  "ecma_transforms",
  "ecma_visit",
  "ecma_codegen",
  "base_node",
  "__parser",
] }
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
linked_hash_set = "0.1.4"

[build-dependencies]
napi-build = "2.0.1"

[dev-dependencies]
testing = "0.32.5"

[profile.release]
lto = true
