[package]
authors = ["SyMind <dacongsama@live.com>"]
name = "binding"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
bench      = false
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = { version = "2.12.2" }
swc_core = { version = "0.100.1", default-features = false, features = ["base_node"] }
svgr-rs = { path = "../core" }

[build-dependencies]
napi-build = "2.0.1"
