[package]
authors     = ["SyMind <dacongsama@live.com>"]
description = "A tool to transform SVG into React components"
name        = "svgr-rs"
edition     = "2021"
license     = "MIT"
repository  = "https://github.com/svg-rust/svgr-rs.git"
version     = "0.1.3"

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
regex = "1.7.3"
serde = { version = "1", features = ["derive"] }
swc_xml = "0.17.0"
swc_core = { version = "0.100.1", features = [
  "__common",
  "ecma_ast",
  "ecma_visit",
  "ecma_codegen",
  "ecma_parser",
] }
thiserror = "1.0.56"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
linked_hash_set = "0.1.4"
lazy_static = "1.5.0"

[dev-dependencies]
codspeed-criterion-compat = "2.7.2"
testing = "0.32.5"

[[bench]]
name = "bench"
harness = false
